just need to add extension point test
Signed-off-by: Stephen Crawford <steecraw@amazon.com>