@@ -32,22 +32,26 @@
 
 package org.opensearch.client.node;
 
-import org.opensearch.action.ActionType;
-import org.opensearch.action.ActionModule.DynamicActionRegistry;
+import java.io.IOException;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Set;
 import org.opensearch.action.ActionListener;
+import org.opensearch.action.ActionModule.DynamicActionRegistry;
 import org.opensearch.action.ActionRequest;
+import org.opensearch.action.ActionType;
 import org.opensearch.action.support.ActionFilters;
 import org.opensearch.action.support.TransportAction;
 import org.opensearch.client.AbstractClientHeadersTestCase;
 import org.opensearch.client.Client;
-import org.opensearch.core.common.io.stream.NamedWriteableRegistry;
 import org.opensearch.common.settings.Settings;
+import org.opensearch.core.common.io.stream.NamedWriteableRegistry;
+import org.opensearch.extensions.ExtensionsManager;
+import org.opensearch.identity.IdentityService;
 import org.opensearch.tasks.Task;
 import org.opensearch.tasks.TaskManager;
 import org.opensearch.threadpool.ThreadPool;
-
-import java.util.Collections;
-import java.util.HashMap;
 
 public class NodeClientHeadersTests extends AbstractClientHeadersTestCase {
 
@@ -60,7 +64,17 @@ public class NodeClientHeadersTests extends AbstractClientHeadersTestCase {
         NodeClient client = new NodeClient(settings, threadPool);
         DynamicActionRegistry dynamicActionRegistry = new DynamicActionRegistry();
         dynamicActionRegistry.registerUnmodifiableActionMap(actions);
-        client.initialize(dynamicActionRegistry, () -> "test", null, new NamedWriteableRegistry(Collections.emptyList()));
+        try {
+            client.initialize(
+                dynamicActionRegistry,
+                () -> "test",
+                null,
+                new NamedWriteableRegistry(Collections.emptyList()),
+                new IdentityService(new ExtensionsManager(Set.of()), Settings.EMPTY, List.of())
+            );
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
         return client;
     }
 
